# rdata

./: Cargo.toml  build.sh  clean.py  search_factor.py
db/: Cargo.toml
db/src/: common.rs  error.rs  errors.rs  lib.rs  sled_tree_proxy.rs  sled_tree_proxy_test.rs  traits.rs
db/src/sqlite/: mod.rs  sqlite_db.rs  sqlite_db_tests.rs
exchange/: Cargo.toml  klines.json  outbound_account_positions.json
exchange/src/: lib.rs
exchange/src/binance/: consts.rs  errors.rs  mod.rs  utils.rs
exchange/src/binance/spot/: client.rs  depth.rs  depth_test.rs  kline.rs  kline_test.rs  market.rs  market_api.rs  market_api_test.rs  market_api_trait.rs  market_stream.rs  market_stream_test.rs  market_test.rs  mod.rs  symbol_trade.rs  symbol_trading.rs  trade.rs  trade_api.rs  trade_api_test.rs  trade_api_trait.rs  trade_stream.rs  trade_stream_test.rs  trade_test.rs  trading.rs  trading_test.rs
exchange/src/binance/spot/models/: conversions.rs  conversions_test.rs  enums.rs  market.rs  mod.rs  trade.rs
exchange/src/binance/spot/parser/: market.rs  trade.rs
exchange/src/binance/spot/requests/: market.rs  mod.rs  trade.rs
exchange/src/binance/spot/responses/: market.rs  trade.rs
json/: Cargo.toml
json/src/: error.rs  json.rs  json_test.rs  lib.rs
platform/: Cargo.toml
platform/conf/: platform_conf.toml
platform/src/: config.rs  errors.rs  lib.rs  main.rs  market_dump.rs  platform.rs  platform_conf.toml
platform/src/backtest/: mod.rs
platform/src/backtest/factors/: factor_backtest.rs  factor_calculators.rs  mod.rs  price_providers.rs  traits.rs
platform/src/config/: config.rs  mod.rs  platform_config.rs
platform/src/conversions/: binance_spot_conversion.rs  mod.rs
platform/src/data_manager/: account_data_manager.rs  config.rs  data_cache.rs  db.rs  local_data_manager.rs  market_data.rs  market_data_cache.rs  market_data_cache_test.rs  market_data_manager.rs  market_data_tests.rs  mod.rs  trade_data.rs  trade_data_cache.rs  trade_data_tests.rs  traits.rs
platform/src/engines/: engine.rs  mod.rs
platform/src/engines/factors/: depth.rs  kline.rs  mod.rs  trade.rs
platform/src/execution/: execution_engine.rs  mod.rs  order_validator.rs  position_manager.rs
platform/src/factor/: factor.rs  factor_manager.rs  mod.rs
platform/src/factors/: mod.rs  ticker.rs
platform/src/market_provider/: binance_spot_market_provider.rs  binance_spot_market_provider_test.rs  binance_spot_market_provider_tests.rs  market_provider.rs  mod.rs
platform/src/models/: binance_spot_conversion.rs  enums.rs  market.rs  market_reqs.rs  mod.rs  strategy.rs  trade.rs  trade_reqs.rs
platform/src/strategy/: mod.rs  position_target.rs  strategy.rs  strategy_engine.rs  strategy_fac.rs  traits.rs
platform/src/trade_provider/: binance_spot_trade_provider.rs  binance_spot_trade_provider_tests.rs  mod.rs  trade_provider.rs
rate_limiter/: Cargo.toml
rate_limiter/src/: error.rs  lib.rs  rate_limiter.rs  rate_limiter_test.rs
research/: db_to_parquet.py  requirements.txt
time/: Cargo.toml
time/src/: latency.rs  lib.rs  time.rs
ws/: Cargo.toml
ws/src/: error.rs  lib.rs  ws_client.rs  ws_client_test.rs
