[package]
name = "exchange"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = { version = "1.38.0", features = ["serde"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
json = { path = "../json" }
async-trait = "0.1.89"
reqwest = "0.12.23"
urlencoding = "2.1.3"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4.28"
env_logger = "0.11.8"
time = { path = "../time" }
rate_limiter = { path = "../rate_limiter" }
ws = { path = "../ws" }
rand = "0.9.2"
rustls = {version = "0.23.32", features = ["ring"]}
