[package]
name = "exchange"
version = "0.1.0"
edition = "2024"

[dependencies]
time = { path = "../time" }
rate_limiter = { path = "../rate_limiter" }
ws = { path = "../ws" }
json = { path = "../json" }

rust_decimal = { version = "1.38.0", features = ["serde"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
async-trait = "0.1.89"
reqwest = { version = "0.12.23", features = ["socks"] }
urlencoding = "2.1.3"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
rand = "0.9.2"
log = "0.4.28"
env_logger = "0.11.8"
tokio-util = "0.7.16"
arc-swap = "1.7.1"
scopeguard = "1.2.0"
