[package]
name = "platform"
version = "0.1.0"
edition = "2024"

[dependencies]
exchange = { path = "../exchange" }
rate_limiter = { path = "../rate_limiter" }
ws = { path = "../ws" }
time = { path = "../time" }
json = { path = "../json" }

tokio = {version = "1.47.1", features = ["full"]}
tokio-util = "0.7.16"
async-trait = "0.1.89"
rust_decimal = { version = "1.38.0", features = ["serde", "serde-bincode"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
config = "0.15.18"
log = "0.4.28"
thiserror = "2.0.17"
arc-swap = "1.7.1"
dashmap = "6.1.0"
env_logger = "0.11.8"
rust_decimal_macros = "1.39.0"

[dev-dependencies]
tempfile = "3.23.0"
