[package]
name = "ws"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.47.1", features = ["full"]}
tokio-util = "0.7.16"
tokio-tungstenite = {version = "0.27.0", features = ["rustls-tls-webpki-roots"]}
tokio-rustls = "0.26.3"
rustls = "0.23.32"
futures-util = "0.3.31"
scopeguard = "1.2.0"
log = "0.4.28"
thiserror = "2.0.16"
serde_json = "1.0.145"

rate_limiter = { path = "../rate_limiter" }
time = { path = "../time" }